@@ -586,16 +586,19 @@ adjustRtimePeakGroups <- function(object, param = PeakGroupsParam(),
     if (!length(subs))
         subs <- seq_along(fileNames(object))
     nSamples <- length(subs)
-    pkGrp <- .getPeakGroupsRtMatrix(
+    missingSample <- nSamples - (nSamples * minFraction(param))
+    pkGrp <- xcms:::.getPeakGroupsRtMatrix(
         peaks = chromPeaks(object, msLevel = msLevel),
-        peakIndex = .peakIndex(
-            .update_feature_definitions(
+        peakIndex = xcms:::.peakIndex(
+            xcms:::.update_feature_definitions(
                 featureDefinitions(object), rownames(chromPeaks(object)),
                 rownames(chromPeaks(object, msLevel = msLevel)))),
         sampleIndex = subs,
-        missingSample = nSamples - (nSamples * minFraction(param)),
+        missingSample = missingSample,
         extraPeaks = extraPeaks(param)
     )
+    message("nSamples: ", nSamples, " missingSample ", missingSample,
+            " nrow pgm ", nrow(pkGrp))
     colnames(pkGrp) <- basename(fileNames(object))[subs]
     pkGrp
 }
